_sass/summer-night-jekyll.scss
/* ... */
// Section: footer

.site-footer {
  padding: 1.5rem 0;
  border-top: solid 1px $border-color;
  font-size: 0.9rem;
  font-weight: 400;
  width: 100%;
  @include small {
    padding: 1.5rem 0.5rem;
  }

  span.float-left, a {
    margin-right: 0.5rem;
  }

  span.float-right {
    margin-left: 0.5rem;
  }
}

// Section: scrollbar

* {
  scrollbar-width: thin;
  scrollbar-color: $border-color $body-background-color;

  &::-webkit-scrollbar {
    width: 8px;
  }

  &::-webkit-scrollbar-track {
    background: $body-background-color;
  }

  &::-webkit-scrollbar-thumb {
    background-color: $border-color;
    border: none;
    border-radius: 0px;
  }
}

// Section: misc

.float-left {
  float: left;
}

.float-right {
  float: right;
}

// Section: homepage only

.homepage-block {
  padding: 0.7rem 1.2rem;
  line-height: 1.6rem;

  &:not(&:last-child) {
    margin-bottom: 2.0rem;
  }

  & h1:first-of-type, & h2:first-of-type, & h3:first-of-type, & h4:first-of-type {
    font-weight: 300;
    margin-top: 0;
  }

  border-left: 2px solid $accent-color;
}

.homepage-grid {
  display: flex;
  flex-flow: row wrap;
  justify-content: flex-start;
  align-items: center;

  .homepage-card-container-third {
    flex: 1;
    //padding: 0.5rem;

    @include large {
      flex-basis: 33.3%;
      max-width: 33.3%;
    }

    @include medium {
      flex-basis: 50%;
      max-width: 50%;
    }

    @include small {
      flex-basis: 100%;
      max-width: 100%;
    }
  }

  .homepage-card-container-half {
    flex: 1;
    //padding: 0.5rem;

    @include large {
      flex-basis: 50%;
      max-width: 50%;
    }

    @include medium {
      flex-basis: 100%;
      max-width: 100%;
    }

    @include small {
      flex-basis: 100%;
      max-width: 100%;
    }
  }

  .homepage-card-container-wide {
    flex: 1;
    //padding: 0.5rem;
    flex-basis: 100%;
    max-width: 100%;

    .wide-card-image {
      object-fit: cover;
      width: 100%;

      @include large {
        height: 20vh;
      }

      @include medium {
        height: 20vh;
      }

      @include small {
      }
    }

    div.homepage-card-text {
      height: auto;
    }
  }

  .homepage-card {
    color: $body-text-color;
    background-color: $body-background-color;
    border: 1px solid $body-background-color;
    display: block;

    div.homepage-card-heading {
      @include transition();
      font-family: "Barlow", sans-serif;
      font-size: 26px;
      line-height: 30px;
      font-weight: 200;
      margin: 0.2rem 0 0.7rem;
    }

    &:hover {
      text-decoration: none;
      color: $body-text-color;
      border: 1px solid $accent-color;
      div.homepage-card-heading {
        color: $accent-color;
        text-decoration: none;
      }
    }

    div.homepage-card-text {
      @include large {
        height: 7rem;
      }
      @include medium {
        height: 7rem;
      }
      padding: 0 1rem 1rem;
      margin: 0;
    }

    div.homepage-card-text-shrink {
      padding: 0 1rem 1rem;
      margin: 0;
    }

    img, video {
      display: block;
      border-radius: 0px;
      border: 0.5rem solid $body-background-color;
      margin: 0;
    }
  }

  .homepage-card-featured {
    div.homepage-card-heading {
      &::after {
        content: "[new]";
        color: $accent-color;
        font-variant: small-caps;
        font-size: 1rem;
        position: relative;
        bottom: 0.2rem;
        padding-left: 0.7rem;
      }
    }
  }
}

// Section: Project pages

.project-tagline {
  margin-top: 1rem !important;
  margin-bottom: 1rem;
  font-weight: normal;
  opacity: 0.7;

  @include large {
    font-size: 1.25rem;
  }

  @include medium {
    font-size: 1.15rem;
  }

  @include small {
    font-size: 1rem;
  }
}

